@@ -5,6 +5,9 @@ Changelog
 1.0a7
 -----
 
+* Added DynamicTextIndexExtender to add message body to searchableText
+  [lgraf]
+
 
 1.0a6
 -----
